fix: use computed spacing-s values instead of spacing-xs in char-list
Normalize all computed spacing values to use --h5p-theme-spacing-s
(= 1rem) as base, making proportional relationships clearer. Original
width/distance preserved via explicit multipliers.

--- a/src/scripts/components/h5p-crossword-char-list.scss
+++ b/src/scripts/components/h5p-crossword-char-list.scss
@@ -21,16 +21,16 @@
       flex-wrap: wrap;
       /* Compensating the value in https://github.com/h5p/h5p-question/blob/3676a7053120fcfe439747d7bcc8206755d7b4c3/styles/question.css#L327 */
       padding-right: 1.615384615em;
-      padding-bottom: var(--h5p-theme-spacing-xs);
-      padding-left: var(--h5p-theme-spacing-xs);
+      padding-bottom: calc(0.5 * var(--h5p-theme-spacing-s));
+      padding-left: calc(0.5 * var(--h5p-theme-spacing-s));
 
       .h5p-crossword-input-fields-group-solution-char-wrapper {
         border-radius: var(--h5p-theme-border-radius-small);
         color: inherit;
         line-height: 1em;
-        margin-right: calc(var(--h5p-theme-spacing-xs) / 2);
-        margin-top: var(--h5p-theme-spacing-xs);
-        padding: calc(var(--h5p-theme-spacing-xs) / 4);
+        margin-right: calc(0.25 * var(--h5p-theme-spacing-s));
+        margin-top: calc(0.5 * var(--h5p-theme-spacing-s));
+        padding: calc(0.125 * var(--h5p-theme-spacing-s));
         position: relative;
 
         &:last-child {
@@ -58,8 +58,8 @@
             color: var(--h5p-theme-feedback-correct-main);
             content: "\e903";
             font-family: h5p-theme;
-            padding-left: calc(var(--h5p-theme-spacing-xs) / 2);
-            right: var(--h5p-theme-spacing-xs);
+            padding-left: calc(0.25 * var(--h5p-theme-spacing-s));
+            right: calc(0.5 * var(--h5p-theme-spacing-s));
             text-decoration: none;
             top: 0;
           }
@@ -74,8 +74,8 @@
             color: var(--h5p-theme-feedback-incorrect-main);
             content: "\e902";
             font-family: h5p-theme;
-            padding-left: calc(var(--h5p-theme-spacing-xs) / 2);
-            right: var(--h5p-theme-spacing-xs);
+            padding-left: calc(0.25 * var(--h5p-theme-spacing-s));
+            right: calc(0.5 * var(--h5p-theme-spacing-s));
             text-decoration: none;
             top: 0;
           }
